kubernetes/staging/app/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: edelrahmmandel-staging
spec:
  basicAuth:
    secret: edelrahmmandel-basicauth
