kubernetes/staging/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edelrahmmandel-service
  namespace: edelrahmmandel-staging
spec:
  selector:
    app: edelrahmmandel
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
