kubernetes/staging/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edelrahmmandel-ingress
  namespace: edelrahmmandel-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: edelrahmmandel-staging-basicauth@kubernetescrd
spec:
  tls:
    - hosts:
        - edelrahmmandel-staging.kumpel.cloud
      secretName: edelrahmmandel-tls
  rules:
    - host: edelrahmmandel-staging.kumpel.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edelrahmmandel-service
                port:
                  number: 3000
